CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

SET(CMAKE_FIND_LIBRARY_PREFIXES "")
SET(CMAKE_FIND_LIBRARY_SUFFIXES ".a")

INCLUDE (FindPkgConfig)
INCLUDE (FindLibXml2)

FIND_PACKAGE (PkgConfig REQUIRED)
PKG_CHECK_MODULES (GTK3 REQUIRED gtk+-3.0 gthread-2.0)

INCLUDE_DIRECTORIES (${GTK3_INCLUDE_DIRS})
LINK_DIRECTORIES (${GTK3_LIBRARY_DIRS})
ADD_DEFINITIONS (${GTK3_CFLAGS_OTHER})

FIND_PACKAGE (LibXml2)
INCLUDE_DIRECTORIES (${LIBXML2_INCLUDE_DIR})
LIST (APPEND ADDITIONAL_LIBS ${LIBXML2_LIBRARIES})

PROJECT (glex)

SET (SRC_DIR ${PROJECT_SOURCE_DIR}/src)

SET (APP_NAME glex)

# DEBUG|RELEASE|RELWITHDEBINFO|MINSIZEREL
SET (CMAKE_BUILD_TYPE RELEASE)

LIST (APPEND SRC ${SRC_DIR}/main.c)
LIST (APPEND SRC ${SRC_DIR}/xdxf.c)

ADD_EXECUTABLE (${APP_NAME} ${SRC})

TARGET_LINK_LIBRARIES (${APP_NAME} ${GTK3_LIBRARIES})
TARGET_LINK_LIBRARIES (${APP_NAME} ${LIBXML2_LIBRARIES})


